Fix GitHub Actions workflow

--- a/ansible/roles/node_app/tasks/deploy.yml
+++ b/ansible/roles/node_app/tasks/deploy.yml
@@ -8,7 +8,7 @@
 
 - name: Checkout app code
   git:
-    repo: 'https://github.com/Daavidmp/ansible.git'
+    repo: 'https://github.com/germarsor2/ansible.git'
     dest: /home/deploy/apps/myapp
     version: main
     force: yes
