Fix GitHub Actions workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,46 +2,48 @@ name: CI/CD - Ansible Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-      node-version: '18'
-    - name: Install deps & run tests
-    run: |
-      cd app
-      npm install
-      npm test
+      - uses: actions/checkout@v4
 
-deploy:
-  needs: test
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-    - name: Prepare SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
+      - name: Install deps & run tests
+        run: |
+          cd app
+          npm install
+          npm test
 
-    - name: Install Ansible
-      run: |
-        sudo apt update
-        sudo apt install -y ansible sshpass
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Run Ansible Playbook
-      env:
-        GIT_REF: ${{ github.ref_name }}
-        ANSIBLE_HOST_KEY_CHECKING: "False"
-      run: |
-        cd ansible
-        ansible-playbook playbooks/deploy.yml -i inventories/production.yml --private-key
-        ~/.ssh/id_rsa
+      - name: Prepare SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Install Ansible
+        run: |
+          sudo apt update
+          sudo apt install -y ansible
+
+      - name: Run Ansible Playbook
+        env:
+          GIT_REF: ${{ github.ref_name }}
+          ANSIBLE_HOST_KEY_CHECKING: "False"
+        run: |
+          cd ansible
+          ansible-playbook playbooks/deploy.yml -i inventories/production.yml --private-key ~/.ssh/id_rsa
