--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,19 +37,15 @@ jobs:
 
       - name: Check secrets exist
         run: |
-          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then echo "SSH_PRIVATE_KEY not set"; fi
-          if [ -z "${{ secrets.REMOTE_HOST }}" ]; then echo "REMOTE_HOST not set"; fi
-          if [ -z "${{ secrets.REMOTE_USER }}" ]; then echo "REMOTE_USER not set"; fi
+          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then echo "SSH_PRIVATE_KEY not set"; exit 1; fi
+          if [ -z "${{ secrets.REMOTE_HOST }}" ]; then echo "REMOTE_HOST not set"; exit 1; fi
+          if [ -z "${{ secrets.REMOTE_USER }}" ]; then echo "REMOTE_USER not set"; exit 1; fi
         shell: bash
 
-      - name: Prepare SSH
-        run: |
-          SSH_DIR="$RUNNER_TEMP/ssh"
-          mkdir -p "$SSH_DIR"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > "$SSH_DIR/id_rsa"
-          chmod 600 "$SSH_DIR/id_rsa"
-          ssh-keyscan -H "${{ secrets.REMOTE_HOST }}" >> "$SSH_DIR/known_hosts"
-        shell: bash
+      - name: Setup SSH key
+        uses: webfactory/ssh-agent@v0.8.1
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Install Ansible
         run: |
@@ -65,6 +61,5 @@ jobs:
           cd ansible
           ansible-playbook playbooks/deploy.yml \
             -i inventories/production.yml \
-            -u ${{ secrets.REMOTE_USER }} \
-          --private-key $RUNNER_TEMP/ssh/id_rsa
-
+            -u ${{ secrets.REMOTE_USER }}
+        shell: bash
